<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_statues"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deal_status"
        app:layout_constraintEnd_toStartOf="@+id/textView72"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sample_date"
        android:textColor="@color/green_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView70"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView70"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/delivery_date"
        app:layout_constraintBottom_toBottomOf="@+id/textView70"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView70"
        app:layout_constraintTop_toTopOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_date"
        android:textColor="@color/green_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView71"
        app:layout_constraintEnd_toEndOf="@+id/textView72"
        app:layout_constraintStart_toStartOf="@+id/textView72"
        app:layout_constraintTop_toTopOf="@+id/textView71" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button21"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/click_button_green"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/view_deal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />
</androidx.constraintlayout.widget.ConstraintLayout>